2007-02-26  Daniel Macks  <dmacks@netspace.org>

	* SelfUpdate.pm: Use text-string params for check().
	* SelfUpdate.pm, SelfUpdate/*.pm: Offload handling of stamp files
	and removal of orphaned metadata into the method-specific classes.

2007-03-04  Dave Morrison  <drm@finkproject.org>

	* FinkVersion.pm.in, PkgVersion.pm, Validation.pm: implement Info4

2007-03-01  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* NetAccess.pm: Added a "DownloadTimeout" option for curl
	so that the mirror doesn't wait indefinitely on bad
	downloads.
	* Base.pm: Updated to lower-case keys in new_from_properties
	like new_from_file does.

2007-02-26  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Scrap the high-level warning for splitoff
	validation failure.

2007-02-25  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* VirtPackage.pm: added support for detecting /usr/X11

2007-02-17  Dave Morrison  <drm@finkproject.org>

	* SysState.pm: when advising the user to run 'apt-get', the advice
	should be to run 'sudo apt-get'

2007-02-15  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* NetAccess.pm: set a timeout on curl, since it can block
	indefinitely while connecting, in some cases
	* Engine.pm, SelfUpdate.pm: Fink::Scanpackages is wrong, use
	the cvs/rsync stat files if available, or fallback to
	Fink::Package->db_index otherwise

2007-02-14  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* NetAccess.pm: allow a hash-ref as argument to
	fetch_url_to_file instead of a string of position-dependent
	entries; also added a try_all_mirrors option to fetch_url_to_file
	to skip asking retries, and attempt to retry until all mirrors
	are exhausted

2007-02-03  Remi Mommsen <remigius.mommsen@cern.ch>

	* Package.pm, PkgVersion.pm: Let the user choose which provider
	to install in order to satisfy a virtual (provided) package.
	(feature request 1635337)
	
2007-01-25  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: If explicit interp in *Script, don't ignore